--- a/pages/editor.module.css
+++ b/pages/editor.module.css
@@ -1,15 +1,15 @@
 .bgpattern {
-	background-color: #faf9ff;
-	opacity: 1;
+	/* background-color: #faf9ff; */
+	/* opacity: 1;
 	background-image: radial-gradient(#7661ff 0.75px, transparent 0.75px),
 		radial-gradient(#7661ff 0.75px, #faf9ff 0.75px);
 	background-size: 30px 30px;
-	background-position: 0 0, 15px 15px;
+	background-position: 0 0, 15px 15px; */
 	display: flex;
 	flex-direction: column;
 	padding: 2rem;
 	padding-top: 2.5rem;
-	gap: 1rem;
+	gap: 0.5rem;
 	height: 100%;
 }
 
